--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 17)
 
 include_directories(/usr/include)
 
-add_executable(server server.cpp)
+add_executable(server server2poll.cpp)
